--- a/SecurityManager/app/build.gradle
+++ b/SecurityManager/app/build.gradle
@@ -1,8 +1,11 @@
 apply plugin: 'com.android.application'
+//apply plugin: 'com.google.gms.google-services'
 //apply plugin: 'com.google.firebase.crashlytics'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 33
+
+
     defaultConfig {
         applicationId "com.softel.securitymanager.securitymanager"
         minSdkVersion 15
@@ -11,7 +14,7 @@ android {
         versionName "1.0"
         archivesBaseName = "SecurityManager"
         multiDexEnabled true
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         ndk {
 
             abiFilters "armeabi-v7a", "x86"
@@ -44,21 +47,21 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:exifinterface:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:support-vector-drawable:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.exifinterface:exifinterface:1.3.6'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
     implementation 'com.loopj.android:android-async-http:1.4.10'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'info.hoang8f:android-segmented:1.0.6'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation files('libs/mantra.mfs100.jar')
-    implementation 'com.android.support:support-v13:28.0.0'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
     implementation 'net.gotev:uploadservice:2.1'
     implementation 'com.afollestad.material-dialogs:core:0.9.4.5'
 
@@ -66,16 +69,18 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 
-    implementation 'com.github.bumptech.glide:glide:4.2.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
-    implementation 'com.android.support:palette-v7:28.0.0'
-    implementation 'com.android.support:gridlayout-v7:28.0.0'
+    implementation 'androidx.palette:palette:1.0.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
 
     // barcode reader library
     implementation 'info.androidhive:barcode-reader:1.1.5'
+
+//    implementation 'com.google.firebase:firebase-crashlytics:18.0.0'
 
     // google vision library
 //    implementation 'com.google.android.gms:play-services-vision:11.0.2'
