--- a/SecurityManager/app/src/main/AndroidManifest.xml
+++ b/SecurityManager/app/src/main/AndroidManifest.xml
@@ -154,7 +154,7 @@
             android:theme="@style/Base.Theme.AppCompat" />
 
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
             android:grantUriPermissions="true">
@@ -165,6 +165,9 @@
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
+        <meta-data
+            android:name="firebase_crashlytics_collection_enabled"
+            android:value="true" />
     </application>
     <uses-feature
         android:name="android.hardware.telephony"
