--- a/SecurityManager/app/build.gradle
+++ b/SecurityManager/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'com.google.gms.google-services'
-//apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 33
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.softel.securitymanager.securitymanager"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -80,10 +80,11 @@ dependencies {
     // barcode reader library
     implementation 'info.androidhive:barcode-reader:1.1.5'
 
-//    implementation 'com.google.firebase:firebase-crashlytics:18.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics:18.4.0'
+//    implementation 'com.google.android.gms:play-services-basement:18.2.0'
 
     // google vision library
-//    implementation 'com.google.android.gms:play-services-vision:11.0.2'
+    implementation 'com.google.android.gms:play-services-vision:20.1.3'
 
 
 
