--- a/SecurityManager/app/build.gradle
+++ b/SecurityManager/app/build.gradle
@@ -75,7 +75,8 @@ dependencies {
     implementation 'androidx.palette:palette:1.0.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
 
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+//    implementation 'com.vanniktech:android-image-cropper:4.5.0'
 
     // barcode reader library
     implementation 'info.androidhive:barcode-reader:1.1.5'
