--- a/SecurityManager/app/src/main/AndroidManifest.xml
+++ b/SecurityManager/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.softel.securitymanager.securitymanager">
-
+    <uses-feature android:name="android.hardware.camera" android:required="false"></uses-feature>
     <application
         android:name="com.softel.securitymanager.securitymanager.a_variable"
         android:allowBackup="true"
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name="com.softel.securitymanager.securitymanager.QRScannerActivity"
             android:windowSoftInputMode="stateHidden|adjustResize"/>
         <activity
@@ -156,6 +157,15 @@
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
